# contractor-bid

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  codex-marketplace.json  mkdocs.yml  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.cursor-plugin/: plugin.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml  security.yml
commands/: check.md  new-bid.md  triage.md
docs/: MCP_PLUGIN.md  WORKFLOW.md  first-bid-walkthrough.md  index.md  install.md  quickstart.md  roadmap.md  troubleshooting.md  why.md
docs/concepts/: bid-package.md  self-learning.md
docs/guides/: mcp-plugin-setup.md  workflow.md
docs/reference/: commands.md  csi-divisions.md  security.md
examples/: agent-session.md
examples/fictional-fences-gates-demo/: README.md  project.json
examples/profiles/: concrete-flatwork.json  division-03-concrete.json  division-04-masonry.json  division-05-metals.json  division-06-wood-plastics-composites.json  division-07-thermal-moisture-protection.json  division-08-openings.json  division-09-finishes.json  division-10-specialties.json  division-11-equipment.json  division-12-furnishings.json  division-13-special-construction.json  division-14-conveying-equipment.json  division-21-fire-suppression.json  division-22-plumbing.json  division-23-hvac.json  division-25-integrated-automation.json  division-26-electrical.json  (+11 more)
profiles/: README.md  concrete-flatwork.json  division-03-concrete.json  division-04-masonry.json  division-05-metals.json  division-06-wood-plastics-composites.json  division-07-thermal-moisture-protection.json  division-08-openings.json  division-09-finishes.json  division-10-specialties.json  division-11-equipment.json  division-12-furnishings.json  division-13-special-construction.json  division-14-conveying-equipment.json  division-21-fire-suppression.json  division-22-plumbing.json  division-23-hvac.json  division-25-integrated-automation.json  division-26-electrical.json  division-27-communications.json  division-28-electronic-safety-security.json  division-31-earthwork.json  division-32-exterior-improvements.json  division-33-utilities.json  drywall-framing.json  electrical.json  fences-gates.json  hvac.json  plumbing.json  roofing.json
scripts/: demo.tape  generate-csi-starters.py  install.ps1  install.sh
skills/: README.md
templates/: 00-scope-reference-index-template.md  02-proposal-letter-template.md  project-readme-template.md  review-pages-template.md  scope-pages-sources-template.json  takeoff-template.json
tests/: test_cli_smoke.py  test_csi_starters.py  test_fictional_demo_pipeline.py  test_mcp_server.py  test_packets.py  test_profile_roundtrip.py  test_scope_guard.py  test_tracker.py  test_triage.py  test_validate.py  test_workbook.py
(+53 files in other folders)
