[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contractor-bid"
version = "0.1.0"
description = "AI-ready commercial construction bid project starter kit for subcontractors in any CSI division."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "ContractorKeith" }
]
dependencies = [
  "openpyxl>=3.1",
  "pypdf>=4.0"
]
keywords = ["construction", "estimating", "subcontractor", "bid", "csi", "takeoff", "ai"]

[project.scripts]
contractor-bid = "contractor_bid.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/contractor_bid"]

[tool.hatch.build.targets.wheel.force-include]
"templates" = "contractor_bid/templates"
"examples" = "contractor_bid/examples"
"docs" = "contractor_bid/docs"
"AGENTS.md" = "contractor_bid/AGENTS.md"
"CLAUDE.md" = "contractor_bid/CLAUDE.md"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/templates",
  "/examples",
  "/docs",
  "/README.md",
  "/AGENTS.md",
  "/CLAUDE.md",
  "/LICENSE"
]

[tool.ruff]
line-length = 100
target-version = "py311"
