[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contractor-bid"
version = "0.2.0"
description = "AI-ready commercial construction bid project starter kit for subcontractors in any CSI division."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "ContractorKeith" }
]
dependencies = [
  "openpyxl>=3.1",
  "pypdf>=4.0"
]
keywords = ["construction", "estimating", "subcontractor", "bid", "csi", "takeoff", "ai"]

[project.optional-dependencies]
docs = [
  "mkdocs-material>=9.6,<10"
]
mcp = [
  "mcp>=1.8.1"
]

[project.scripts]
contractor-bid = "contractor_bid.cli:main"
contractor-bid-mcp = "contractor_bid.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/contractor_bid"]

[tool.hatch.build.targets.wheel.force-include]
"templates" = "contractor_bid/templates"
"examples" = "contractor_bid/examples"
"docs" = "contractor_bid/docs"
"scripts" = "contractor_bid/scripts"
"profiles" = "contractor_bid/profiles"
"skills" = "contractor_bid/skills"
"commands" = "contractor_bid/commands"
".claude-plugin" = "contractor_bid/.claude-plugin"
".cursor-plugin" = "contractor_bid/.cursor-plugin"
".mcp.json" = "contractor_bid/.mcp.json"
"codex-marketplace.json" = "contractor_bid/codex-marketplace.json"
"AGENTS.md" = "contractor_bid/AGENTS.md"
"CLAUDE.md" = "contractor_bid/CLAUDE.md"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/templates",
  "/examples",
  "/docs",
  "/scripts",
  "/packaging",
  "/profiles",
  "/skills",
  "/commands",
  "/.claude-plugin",
  "/.cursor-plugin",
  "/.mcp.json",
  "/codex-marketplace.json",
  "/README.md",
  "/AGENTS.md",
  "/CLAUDE.md",
  "/LICENSE"
]

[tool.ruff]
line-length = 100
target-version = "py311"
